gccida/c2/emit_case_nodes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6469:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6474:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6481:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6486:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6543:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v83; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6549:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v89; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6551:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v91; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6552:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v92; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6555:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v95; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6556:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v96; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6562:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v102; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6566:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v106; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6569:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode oldmodea; // [rsp+8h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6570:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6571:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6574:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *label; // [rsp+30h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/stmt.c:6795:28: error: use of undeclared identifier 'machine_mode'
v15 = convert_modes( v9, ( machine_mode)v11, v12, v10); 
                           ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_case_nodes/src/obj/stmt.o] Error 1
